[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/macrofago_npc.png" type="Texture" id=1]
[ext_resource path="res://Objects/macrofagoNPC.gd" type="Script" id=2]
[ext_resource path="res://Objects/animationParts.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 38, 17, 38 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 76, 17, 38 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "shocked",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 17, 76, 17, 38 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "shocked",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 17, 38, 17, 38 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 34, 76, 17, 38 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "shocked",
"speed": 5.0
} ]

[node name="macrofagoNPC" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="animationParts" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="torsoFrames" type="AnimatedSprite" parent="animationParts"]
frames = SubResource( 2 )

[node name="handR" type="AnimatedSprite" parent="animationParts"]
position = Vector2( -12, 24 )
frames = SubResource( 6 )

[node name="handL" type="AnimatedSprite" parent="animationParts"]
position = Vector2( 16, 24 )
frames = SubResource( 11 )
